# shopping-list-rust

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  server.yml
migrations/2021-03-28-101956_create_shopping_list_items/: down.sql  up.sql
migrations/2021-03-28-102003_create_users/: down.sql  up.sql
migrations/2021-03-28-102023_create_shopping_lists/: down.sql  up.sql
src/: main.rs  models.rs  request.rs  router.rs  utils.rs
src/controllers/: mod.rs  shopping_list_controller.rs  user_controller.rs
src/repositories/: connection.rs  mod.rs  schema.rs  shopping_list.rs  shopping_list_items.rs  shopping_list_users.rs  user.rs
