[package]
name = "shopping-list"
version = "0.1.0"
authors = ["Ivan Hrabcak <ivan@hrabcak.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.7"
diesel = "1.4.6"
rocket_codegen = "0.4.7"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.124", features = ["derive"] }
rust-crypto = "0.2.36"
ttl_cache = "0.5.1"
rand = "0.8.3"
serde_json = "1.0.64"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_postgres_pool", "json"]